packages/fuel-indexer-tests/trybuild/fail_if_indexer_module_is_empty.stderr
error: No module body, must specify at least one handler function.
 --> trybuild/fail_if_indexer_module_is_empty.rs
  |
  | #[indexer(manifest = "packages/fuel-indexer-tests/trybuild/simple_wasm.yaml")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> trybuild/fail_if_indexer_module_is_empty.rs
  |
  | mod indexer {}
  |               ^ consider adding a `main` function to `$DIR/trybuild/fail_if_indexer_module_is_empty.rs`
